switching completely to twig and need to fix some shit

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>asshole</title>
-</head>
-<body>
+{% extends 'partials/layout.html' %}
+
+
+{% block content %}
     {% for user in users  %}
 
         <li>{{ user.name }} @ &lt; {{ user.email }} &gt;</li>
 
     {% endfor %}
     {{ 'string' | bc }} <br><br>
-    {{ 'string' | bc | len }}
-</body>
-</html>
+    {{ 'string' | bc | length }}
+
+{% endblock %}
