--- a/app/views/partials/layout.html
+++ b/app/views/partials/layout.html
@@ -7,4 +7,13 @@
     <title>HEXy way</title>
 </head>
 <body>
-
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </nav>
+    {% block content %}{% endblock %}
+</body>
+</html>
